--- a/go_web/day03/bookstore0612/views/pages/manager/book_manager.html
+++ b/go_web/day03/bookstore0612/views/pages/manager/book_manager.html
@@ -34,7 +34,7 @@
                 <td>{{.Sales}}</td>
                 <td>{{.Stock}}</td>
                 <td><a href="/pages/manager/book_edit.html">修改</a></td>
-                <td><a href="#">删除</a></td>
+                <td><a href="/deleteBok?bookId={{.ID}}">删除</a></td>
             </tr>
         {{end}}
         <tr>
