--- a/go_web/day05/bookstore0612/views/pages/user/login_success.html
+++ b/go_web/day05/bookstore0612/views/pages/user/login_success.html
@@ -11,7 +11,7 @@
 	}
 	
 	h1 a {
-		color:red;
+		color: #ff0000;
 	}
 </style>
 </head>
@@ -19,16 +19,16 @@
 		<div id="header">
 				<img class="logo_img" alt="" src="/static/img/logo.gif" >
 				<div>
-					<span>欢迎<span class="um_span">韩总</span>光临尚硅谷书城</span>
+					<span>欢迎<span class="um_span">{{.Username}}</span>光临尚硅谷书城</span>
 					<a href="/pages/cart/cart.html">购物车</a>
 					<a href="/">注销</a>&nbsp;&nbsp;
-					<a href="/">返回</a>
+					<a href="/main">返回</a>
 				</div>
 		</div>
 		
 		<div id="main">
 		
-			<h1>欢迎回来 <a href="/">转到主页</a></h1>
+			<h1>欢迎回来 <a href="/main">转到主页</a></h1>
 	
 		</div>
 		
